@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -47,6 +47,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
+import java.util.regex.Pattern;
 
 import com.sun.javatest.Status;
 import com.sun.javatest.regtest.TimeoutHandler;
@@ -204,7 +205,7 @@ public class CompileAction extends Action {
         boolean foundAsmFile = false;
 
         for (int i = 0; i < args.size(); i++) {
-            // note: in the following code, some args are overrwritten in place
+            // note: in the following code, some args are overwritten in place
             String currArg = args.get(i);
 
             if (currArg.endsWith(".java")) {
@@ -326,18 +327,48 @@ public class CompileAction extends Action {
         List<String> jcodArgs = new ArrayList<>();
         boolean runJavac = process;
 
+        int insertPos = -1;
+        boolean seenSourceOrRelease = false;
+        boolean seenEnablePreview = false;
+
         for (String currArg : args) {
             if (currArg.endsWith(".java")) {
                 if (!(new File(currArg)).exists())
                     throw new TestRunException(CANT_FIND_SRC + currArg);
+                if (insertPos == -1) {
+                    insertPos = javacArgs.size();
+                }
                 javacArgs.add(currArg);
                 runJavac = true;
             } else if (currArg.endsWith(".jasm")) {
                 jasmArgs.add(currArg);
             } else if (currArg.endsWith(".jcod")) {
                 jcodArgs.add(currArg);
-            } else
+            } else {
+                int eq = currArg.indexOf("=");
+                switch (eq == -1 ? currArg : currArg.substring(0, eq)) {
+                    case "--enable-preview":
+                        seenEnablePreview = true;
+                        break;
+                    case "-source":
+                    case "--source":
+                    case "--release":
+                        if (insertPos == -1) {
+                            insertPos = javacArgs.size();
+                        }
+                        seenSourceOrRelease= true;
+                        break;
+                }
                 javacArgs.add(currArg);
+            }
+        }
+
+        if (script.enablePreview() && !seenEnablePreview) {
+            javacArgs.add(insertPos, "--enable-preview");
+            if (!seenSourceOrRelease) {
+                int v = script.getTestJDKVersion().major;
+                javacArgs.add(insertPos + 1, "--release=" + v);
+            }
         }
 
         Status status;
@@ -793,10 +824,10 @@ public class CompileAction extends Action {
      */
     private Status checkGoldenFile(String actual, Status status) throws TestRunException {
         File refFile = new File(script.absTestSrcDir(), ref);
-        try (BufferedReader r1 = new BufferedReader(new StringReader(actual));
-            BufferedReader r2 = new BufferedReader(new FileReader(refFile)) ) {
+        try (BufferedReader actualReader = new BufferedReader(new StringReader(actual));
+            BufferedReader refReader = new BufferedReader(new FileReader(refFile)) ) {
             int lineNum;
-            if ((lineNum = compareGoldenFile(r1, r2)) != 0) {
+            if ((lineNum = compareGoldenFile(actualReader, refReader)) != 0) {
                 return failed(COMPILE_GOLD_FAIL + ref +
                         COMPILE_GOLD_LINE + lineNum);
             }
@@ -813,18 +844,25 @@ public class CompileAction extends Action {
      * differences are found, then 0 is returned.  Otherwise, the line number
      * where differences are first detected is returned.
      *
-     * @param r1   The first item for comparison.
-     * @param r2   The second item for comparison.
-     * @return 0   If no differences are returned.  Otherwise, the line number
-     *             where differences were first detected.
+     * @param actualReader the reader for the output actually found
+     * @param refReader    the reader for the reference (expected) content
+     * @return the line number where differences were first detected,
+     *         or 0 if no differences were detected
      */
-    private int compareGoldenFile(BufferedReader r1, BufferedReader r2)
-    throws TestRunException {
+    private int compareGoldenFile(BufferedReader actualReader, BufferedReader refReader)
+            throws TestRunException {
+        Pattern ignoreLinesPattern = script.getIgnoreRefLinesPattern();
         try {
             int lineNum = 0;
             for ( ; ; ) {
-                String s1 = r1.readLine();
-                String s2 = r2.readLine();
+                String s1 = actualReader.readLine();
+                if (ignoreLinesPattern != null) {
+                    while (s1 != null && ignoreLinesPattern.matcher(s1).matches()) {
+                        section.getMessageWriter().println("Ignoring line: " + s1);
+                        s1 = actualReader.readLine();
+                    }
+                }
+                String s2 = refReader.readLine();
                 lineNum++;
 
                 if ((s1 == null) && (s2 == null))
