@@ -53,6 +53,7 @@ import com.sun.javatest.regtest.config.Locations.LibLocn;
 import com.sun.javatest.regtest.config.Modules;
 import com.sun.javatest.regtest.config.ParseException;
 import com.sun.javatest.regtest.exec.RegressionScript.PathKind;
+import com.sun.javatest.regtest.tool.Version;
 import com.sun.javatest.regtest.util.StringUtils;
 
 import static com.sun.javatest.regtest.RStatus.createStatus;
@@ -188,12 +189,16 @@ public class MainAction extends Action
             othervmOverrideReasons.add("test or library uses bootclasspath");
         }
 
+        boolean seenEnablePreview = false;
         // separate the arguments into the options to java, the
         // classname and the parameters to the named class
         for (int i = 0; i < args.size(); i++) {
             String arg = args.get(i);
             if (testClassName == null) {
                 if (arg.startsWith("-")) {
+                    if (arg.equals("--enable-preview")) {
+                        seenEnablePreview = true;
+                    }
                     testJavaArgs.add(arg);
                     if (JDKOpts.hasFollowingArg(arg)) {
                         testJavaArgs.add(args.get(++i));
@@ -225,6 +230,15 @@ public class MainAction extends Action
                 throw new ParseException(PARSE_POLICY_OTHERVM);
             if (secureCN != null)
                 throw new ParseException(PARSE_SECURE_OTHERVM);
+        }
+
+        if (script.enablePreview() && !seenEnablePreview) {
+            testJavaArgs.add("--enable-preview");
+            if (!othervm) {
+                // ideally, this should not force othervm mode, but just allow
+                // the use of an agent with preview enabled
+                othervmOverrideReasons.add("test requires --enable-preview");
+            }
         }
 
         if (!othervm && !useModuleExportAPI) {
@@ -558,8 +572,17 @@ public class MainAction extends Action
                 .append(script.getTestNGPath())
                 .asList();
 
+        Version v = script.getRequiredVersion();
+
+        // In the following, using the preferred behavior reduces the number of kinds of agents,
+        // and so increases the reuse of agents, but some tests inadvertently rely on the old
+        // behavior. Therefore, the new preferred behavior is opt-in for test suites that
+        // require version 5.1 b01 or better.
         SearchPath classpath = paths.get(PathKind.CLASSPATH);
-        SearchPath agentClasspath = new SearchPath(classpath).retainAll(stdLibs);
+        SearchPath agentClasspath = (v.version == null)
+                        || (v.compareTo(new Version("5.1 b01")) >= 0)
+                ? new SearchPath().append(stdLibs)                  // preferred behavior
+                : new SearchPath(classpath).retainAll(stdLibs);     // old behavior
         SearchPath runClasspath = new SearchPath(classpath).removeAll(stdLibs);
 
         if (showMode)
